client/src/components/AddMediaModal/styles.css
.add-media-modal {
  max-width: 1085px;
}

.add-media-modal .faded-seperator {
  margin-bottom: 20px;
}

.media-modal-content {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  margin: 0 15px;
}

.media-modal-content textarea {
  font-family: inherit;
  font-size: 18px;
  width: 60%;
  min-width: 325px;
  height: 170px;
  padding: 10px;
  margin-bottom: 20px;
  resize: none;
}

.media-modal-content input,
.media-modal-content textarea,
.media-modal-content select {
  outline: none;
}

.media-modal-content input:focus,
.media-modal-content textarea:focus,
.media-modal-content select:focus {
  -webkit-box-shadow: 0 0 2px 2px #81abb8;
          box-shadow: 0 0 2px 2px #81abb8;
}

.media-modal-content input::-webkit-input-placeholder,
.media-modal-content textarea::-webkit-input-placeholder,
.media-modal-content select::-webkit-input-placeholder {
  color: rgba(0, 0, 0, 0.25);
  font-weight: 500;
}

.media-modal-content input:-ms-input-placeholder,
.media-modal-content textarea:-ms-input-placeholder,
.media-modal-content select:-ms-input-placeholder {
  color: rgba(0, 0, 0, 0.25);
  font-weight: 500;
}

.media-modal-content input::-ms-input-placeholder,
.media-modal-content textarea::-ms-input-placeholder,
.media-modal-content select::-ms-input-placeholder {
  color: rgba(0, 0, 0, 0.25);
  font-weight: 500;
}

.media-modal-content input::placeholder,
.media-modal-content textarea::placeholder,
.media-modal-content select::placeholder {
  color: rgba(0, 0, 0, 0.25);
  font-weight: 500;
}

.media-modal-top-left {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}

.input-container {
  margin-right: 40px;
}

.input-container .input-item {
  margin-bottom: 20px;
}

.input-container input,
.input-container select {
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
  font-family: inherit;
  font-size: 18px;
  width: 345px;
  height: 40px;
  padding: 10px;
  border: none;
  background-color: #e5e5e5;
}

.input-container select {
  padding: 0 10px;
}

.media-title-input input:focus + .suggestions {
  display: block;
}

.media-title-input .suggestions:hover {
  display: block;
}

.suggestions {
  position: absolute;
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
  display: none;
  color: black;
  width: 345px;
  max-height: 150px;
  border: 1px solid #999999;
  background-color: #e5e5e5;
  overflow: auto;
}

.suggestion-item {
  min-height: 30px;
  padding: 0 10px;
  line-height: 27px;
  border-bottom: 1px solid rgba(153, 153, 153, 0.1);
  cursor: pointer;
}

.suggestion-item:hover {
  background-color: rgba(0, 0, 0, 0.1);
}

.suggestion-item .suggestion-item-name {
  font-size: 14px;
}

.suggestion-item .suggestion-item-name span {
  color: #a1a1a1;
}

.media-modal-media-info {
  margin-left: 5px;
  width: 20vw;
  max-width: 410px;
}

.media-modal-media-info .media-modal-media-title {
  font-family: sans-serif;
  font-size: 36px;
  margin-left: -5px;
}

.media-modal-media-info .media-modal-media-year {
  color: #ffffff6e;
  font-size: 28px;
  margin-top: -10px;
}

.media-modal-media-info .media-modal-media-type {
  font-size: 18px;
}

.media-modal-media-info .media-modal-media-description {
  color: #c0c0c0;
  font-size: 18px;
  margin-bottom: 3px;
}

.media-modal-media-info .faded-seperator {
  margin: 8px 0;
}

.media-modal-media-poster {
  width: 200px;
  height: 300px;
  margin-left: 50px;
}

.modal-add-media-button {
  position: absolute;
  font-size: 16px;
  bottom: 20px;
  right: 30px;
  height: 30px;
  padding: 0 5px;
  line-height: 30px;
  border-radius: 5px;
  background-color: #526774;
  -webkit-box-shadow: 0px 1px 4px 1px rgba(0, 0, 0, 0.25);
          box-shadow: 0px 1px 4px 1px rgba(0, 0, 0, 0.25);
  cursor: pointer;
}
/*# sourceMappingURL=styles.css.map */

